fixing bug adding z-index to Modal-overlay

--- a/styles/style.css
+++ b/styles/style.css
@@ -232,6 +232,7 @@ button:hover {
     background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
+    z-index: 99;
 
     display: flex;
     align-items: center;
